--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "firebase": "4.13.1",
     "firebase-admin": "5.12.0",
-    "lodash": "4.17.10",
+    "lodash": "^4.17.10",
     "moment": "2.22.1",
     "puppeteer": "1.3.0",
     "shelljs": "0.8.1"
